--- a/WPF_Document/MainWindow.xaml
+++ b/WPF_Document/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Button x:Name="openButton" Content="Button" HorizontalAlignment="Left" Margin="145,173,0,0" VerticalAlignment="Top" Height="80" Width="150" Click="openButton_Click"/>
 
     </Grid>
 </Window>
